kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: obo-ns
  name: rs-obo
spec:

  # replicas: 4

  selector:
    matchLabels:
      name: obo-pod

  template:
    metadata:
      namespace: obo-ns
      name: obo-pod
      labels:
        name: obo-pod
    spec:
      containers:
      - name: obo-container
        image: hautt/obo-app
        resources:
          limits:
            memory: "1024Mi"
            cpu: "1000m"
