kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: obo-svc
  namespace: obo-ns
spec:
  selector:
    name: obo-pod
  ports:
  - port: 8080
