kubernetes/1.app.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: obo-ns

---
# Service đại diện MySQL ngoài cluster
apiVersion: v1
kind: Service
metadata:
  name: mysql-external
  namespace: obo-ns
spec:
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
  type: ClusterIP

---
# Endpoints ánh xạ tới IP host MySQL thật
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql-external
  namespace: obo-ns
subsets:
- addresses:
  - ip: 10.25.0.109    # đổi nếu DB host khác
  ports:
  - name: mysql
    port: 3306
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: obo-app
  namespace: obo-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: obo-app
  template:
    metadata:
      labels:
        app: obo-app
    spec:
      containers:
        - name: obo-app
          image: hautt/obo-app:v0
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: obo-app-svc
  namespace: obo-ns
spec:
  selector:
    app: obo-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP

---
# Tuỳ bạn nếu có NGINX Ingress + cert-manager
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: obo-app-ing
  namespace: obo-ns
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts: [ "obo.app.thweb.click" ]
      secretName: obo-tls
  ingressClassName: nginx
  rules:
    - host: obo.app.thweb.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: obo-app-svc
                port:
                  number: 80
